[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Texture/grass.png" type="Texture" id=1]
[ext_resource path="res://assets/Script/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/Object/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Object/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Object/Hub.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )
coin = ExtResource( 4 )

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="CoinContainer" type="Node2D" parent="."]

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 244, 356 )

[node name="GameTimer" type="Timer" parent="."]

[node name="Player" parent="." groups=["State"] instance=ExtResource( 3 )]

[node name="Hub" parent="." groups=["Hub", "State"] instance=ExtResource( 5 )]

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="startgame" from="Hub" to="." method="_on_Hub_startgame"]
